style.css
:root {
  --primary: #353377;
  --secondary: #aa7a39;
  --secondary-dark: #553201;
  --secondary-light: #ffdaa7;
  --primary-dark: #0a093b;
  --primary-light: #7f7eb2;
  --text-light: #fff;
  --text-dark: #000;

  --toggle-menu-width: 280px;
}

body {
  margin-top: 0;
}

#page-container {
  display: grid;
  font-family: Georgia, "Times New Roman", Times, serif;
  justify-items: center;
  grid-template-areas:
    "nav"
    "main";
  margin-top: 0;
}

h1,
h2,
h3,
nav {
  font-family: Arial, Helvetica, sans-serif;
}

#navbar {
  grid-area: nav;
  position: sticky;
  top: 0;
  box-shadow: 0 5px 15px 3px black;
  box-sizing: border-box;
  margin: 0;
  padding: 1.5em 1em 0.25em;
  width: 100%;
  background-color: white;
}

.nav-links {
  list-style: none;
  margin: 1em;
  padding: 1em 1em;
  line-height: 1.4em;
}

#main-doc {
  grid-area: main;
  margin: 1em 0;
  width: 90%;
}

.main-section {
  border-radius: 1em;
  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
  margin: 1.5em 0;
  padding: 0.25em 1.5em 1.5em;
}

.main-section > header {
  border-bottom: 2px var(--primary-light) dashed;
}

@media screen and (min-width: 576px) {
  body {
    width: 80%;
    margin: 0 auto;
  }
}

@media screen and (min-width: 868px) {
  #page-container {
    grid-template-areas: "nav main";
    grid-gap: 30px;
  }

  #navbar {
    position: sticky;
    top: 0;
    padding: 0 1em;
    margin-top: 0;
    box-shadow: none;
    padding: 0;
  }
  @supports (display: grid) {
    #navbar {
      height: 100vh;
    }
  }
}

.math,
.number,
.numeral-symbol {
  font-family: "Courier New", Courier, monospace;
  font-size: smaller;
}

h3 ~ pre {
  padding: 1.25em;
  line-height: 1.4em;
  background-color: #f8f8f8;
  border: 3px ridge #ddd;
}

/* Toggle Menu */
#navMenu {
  border-top-left-radius: 1em;
  border-bottom-left-radius: 1em;
  position: fixed;
  top: 0;
  right: 0;
  width: var(--toggle-menu-width);
  margin-top: 60px;
  transform: translateX(var(--toggle-menu-width));
  transition: transform 0.25s ease-in-out;
  background: white; /*linear-gradient(180deg, #ddd 0%, 60%, #222 100%); */
  border: 1px black solid;
}

/* When the toggle is active (checked) slide in menu from side */
input[type="checkbox"]:checked ~ #navMenu {
  transform: translateX(0);
}

input[type="checkbox"].navMenuToggleControl {
  display: none;
  transition: all 0.25s;
}

.navMenuToggleIcon {
  position: absolute;
  top: 25px;
  right: 10px;
  height: 22px;
  width: 22px;
  z-index: 10;
  cursor: pointer;
  transition: all 0.25s;
}

.hamburger {
  transition: all 0.25s;
  box-sizing: border-box;
  position: absolute;
  height: 3px;
  width: 100%;
  background-color: #000;
}

.hamburger-middle {
  transition: all 0.25s;
  position: relative;
  float: left;
  margin-top: 3px;
}

.hamburger-top {
  position: relative;
  margin-top: 3px;
  float: left;
  transition: all 0.25s;
}

.hamburger-bottom {
  position: relative;
  margin-top: 3px;
  float: left;
  transition: all 0.25s;
}

/* Hide the horizontal bar in the menu toggle when active (checked). */
input[type="checkbox"]:checked ~ .navMenuToggleIcon > .hamburger-middle {
  opacity: 0;
}

/* Hide the horizontal bar in the menu toggle when active (checked). */
input[type="checkbox"]:checked ~ .navMenuToggleIcon > .hamburger-top {
  margin-top: 8px;
  transform: rotate(135deg);
  transition: all 0.25s;
}

input[type="checkbox"]:checked ~ .navMenuToggleIcon > .hamburger-bottom {
  margin-top: -9px;
  transform: rotate(-135deg);
  transition: all 0.25s;
}

@media screen and (min-width: 576px) {
  .navMenuToggleIcon {
    display: none;
  }

  #navMenu {
    border-top-left-radius: 0;
    height: 100%;
    position: relative;
    width: var(--toggle-menu-width);
    margin-top: 0;
    transform: none;
    transition: none;
    border: none;
  }
}

